[gd_scene load_steps=19 format=3 uid="uid://dec52b6m86arh"]

[ext_resource type="Texture2D" uid="uid://dutj6oqpqsah8" path="res://icon.svg" id="1_hajux"]
[ext_resource type="Script" uid="uid://diebeww21a2n5" path="res://scripts/wrld.gd" id="1_rypmk"]
[ext_resource type="Texture2D" uid="uid://phavsrjuypk" path="res://images/panorama/panorama_image.png" id="2_wjubb"]
[ext_resource type="Texture2D" uid="uid://dwkrxscahr47b" path="res://images/1024px-Roscosmos_logo_en.svg.png" id="3_1fck1"]
[ext_resource type="Texture2D" uid="uid://dr0lda1yvi5hx" path="res://images/djiabz1l0z64hy90d6kd0rdj84k2jwj3.jpg" id="4_iregm"]
[ext_resource type="PackedScene" uid="uid://cnllahjfdnqyw" path="res://scenes/test_oxygen_refiller.tscn" id="6_wjubb"]
[ext_resource type="PackedScene" path="res://scenes/space_station.tscn" id="7_dcih3"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_dcih3"]
panorama = ExtResource("2_wjubb")

[sub_resource type="Sky" id="Sky_abybr"]
sky_material = SubResource("PanoramaSkyMaterial_dcih3")

[sub_resource type="Environment" id="Environment_vq1nk"]
background_mode = 2
sky = SubResource("Sky_abybr")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lxsrx"]
albedo_texture = ExtResource("1_hajux")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_s8qk6"]
material = SubResource("StandardMaterial3D_lxsrx")
size = Vector3(15, 1, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_y4bj2"]
size = Vector3(15, 1, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_wjubb"]
size = Vector3(1, 5, 7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dcih3"]
albedo_texture = ExtResource("3_1fck1")
uv1_scale = Vector3(0.43, 0.43, 0.43)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_abybr"]
material = SubResource("StandardMaterial3D_dcih3")
size = Vector3(1, 5, 7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vq1nk"]
albedo_texture = ExtResource("4_iregm")
uv1_scale = Vector3(0.3, 0.3, 0.3)
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_5aatj"]
material = SubResource("StandardMaterial3D_vq1nk")
size = Vector3(1, 5, 7)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_rypmk")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vq1nk")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_s8qk6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_y4bj2")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 19, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2"]
shape = SubResource("BoxShape3D_wjubb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
mesh = SubResource("BoxMesh_abybr")

[node name="StaticBody3D3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3"]
shape = SubResource("BoxShape3D_wjubb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D3"]
mesh = SubResource("BoxMesh_5aatj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 373.0
offset_top = 229.0
offset_right = -373.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MainMenu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AdressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Adress"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cc3xq36jc4yo")
spawn_path = NodePath("..")

[node name="TestOxygenRefiller" parent="." instance=ExtResource("6_wjubb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.64713, 1, 6.29736)

[node name="SpaceStation" parent="." instance=ExtResource("7_dcih3")]
transform = Transform3D(0.928492, 0.32918, 0.171879, -0.371352, 0.823051, 0.42975, 0, -0.462847, 0.886438, -39, 0, 99)

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
